--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
   },
   "homepage": "https://github.com/tecknoworks/movie-service#readme",
   "dependencies": {
+    "axios": "^0.19.0",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
+    "httpclient": "^0.1.0",
     "mongoose": "^5.6.7"
   }
 }
