--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
   "dependencies": {
     "axios": "^0.19.0",
     "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
+    "faker": "^4.1.0",
     "httpclient": "^0.1.0",
     "mongoose": "^5.6.7"
   }
