--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "C:\\Users\\gheorghe.sava\\AppData\\Roaming\\npm\\nodemon.cmd src/index.js"
+    "start": "nodemon src/index.js"
   },
   "repository": {
     "type": "git",
@@ -29,5 +29,8 @@
     "faker": "^4.1.0",
     "httpclient": "^0.1.0",
     "mongoose": "^5.6.7"
+  },
+  "devDependencies": {
+    "morgan": "^1.9.1"
   }
 }
